--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
+<p>Testing second paragraph.</p>
 <p style="color:orange;">This is orange text.</p>
 
 <a href="https://www.bit.ly/thudthudtonk">YouTube Channel</a>
