--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link rel="stylesheet" href="docs/assets/css/test.css">
+  <link rel="stylesheet" href="thudthudtonk.github.io/docs/assets/css/test.css">
 </head>
 <body>
 
