--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
 <head>
   <link rel="stylesheet" href="thudthudtonk.github.io/docs/assets/css/test.css">
+  <script src="docs/assets/js/script.js"></script>
+  <!--<script src="scriptTest.js"></script>-->
 </head>
 <body>
 
@@ -26,5 +28,22 @@
 
 <a href="https://www.bit.ly/thudthudtonk">YouTube Channel</a>
 
+<button type="button" id="counterButton" onclick="incrementCounter()">Test Button</button>
+
+<button type="button" id="alertButton" onclick="doAlert()">Test Button2</button>
+
+<!--<script> var count = 0; </script>
+<script> incrementCounter() {
+	count+=1;
+	document.getElementById("counter").innerHTML = counter.toString();
+</script>
+-->
+
+<p id="counter">0</p>
+
+<!--<button type="button" onclick='document.getElementById("counter").innerHTML = "bingus"'>Test Button3</button>
+
+<button type="button" onclick=incrementCounter>Test Button4</button>
+-->
 </body>
 </html>
