--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
 
 <p id="counter">0</p>
 
+<div></div>
+
+<button type="button" id="redButton" onclick="redBlueCheck('red')">Red Button</button>
+
+<div></div>
+
+<button type="button" id="blueButton" onclick="redBlueCheck('blue')">Blue Button</button>
+
+<div></div>
+
+<p id="colorParagraph">red</p>
+
+<div></div>
+
+<p id="rightWrong"></p>
+
 <!--<button type="button" onclick='document.getElementById("counter").innerHTML = "bingus"'>Test Button3</button>
 
 <button type="button" onclick=incrementCounter>Test Button4</button>
