--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link rel="stylesheet" href="thudthudtonk.github.io/docs/assets/css/test.css">
+  <link rel="stylesheet" href="docs/assets/css/test.css">
   <script src="docs/assets/js/script.js"></script>
   <!--<script src="scriptTest.js"></script>-->
 </head>
@@ -28,6 +28,8 @@
 
 <a href="https://www.bit.ly/thudthudtonk">YouTube Channel</a>
 
+<a href="test1.html">test1</a>
+
 <button type="button" id="counterButton" onclick="incrementCounter()">Test Button</button>
 
 <button type="button" id="alertButton" onclick="doAlert()">Test Button2</button>
@@ -40,6 +42,9 @@
 -->
 
 <p id="counter">0</p>
+
+<p>Longest Streak:</p>
+<p id="streak">0</p>
 
 <div></div>
 
@@ -57,9 +62,62 @@
 
 <p id="rightWrong"></p>
 
+<div></div>
+
+<image src="docs/assets/images/jorb.gif" alt="jorb"></image>
 <!--<button type="button" onclick='document.getElementById("counter").innerHTML = "bingus"'>Test Button3</button>
 
 <button type="button" onclick=incrementCounter>Test Button4</button>
 -->
+
+<!-- Testing by stealing some tutorial online, will make my own version later -->
+<!-- Assuming the css that I copied works, which I still need to figure out, I should
+be able to change what the "buttons" (which are really links) navigate to in the href attribute-->
+<!-- Should make some more pages or something and have them go to this stuff. -->
+
+<p>Note: This was stolen for testing, see source:</p>
+<a href="https://line25.com/tutorials/how-to-create-a-pure-css-dropdown-menu/">Source</a>
+
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Tutorials</a>
+      <ul>
+        <li><a href="#">Photoshop</a></li>
+        <li><a href="#">Illustrator</a></li>
+        <li><a href="#">Web Design</a>
+          <ul>
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">CSS</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li><a href="#">Articles</a>
+      <ul>
+        <li><a href="#">Web Design</a></li>
+        <li><a href="#">User Experience</a></li>
+      </ul>
+    </li>
+    <li><a href="#">Inspiration</a></li>
+  </ul>
+</nav>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<p>This text is here so that you can scroll down far enough to interact with the stolen testing menu</p>
+
 </body>
 </html>
