--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 <html lang="en-US">
 <head>
   <link rel="stylesheet" href="docs/assets/css/test.css">
-  <script src="docs/assets/js/script.js"></script>
-  <!--<script src="scriptTest.js"></script>-->
 </head>
 <body>
+
+<nav>
+  <ul>
+    <li><a href="test1.html">test1</a></li>
+    <li><a href="docs/assets/pages/orbs.html">Orb Collection</a></li>
+    <li><a href="docs/assets/pages/buttongame.html">Button Game</a></li>
+    <li><a href="#">Links</a>
+      <ul>
+        <li><a href="https://www.bit.ly/thudthudtonk">YouTube</a></li>
+        <li><a href="https://www.linkedin.com/in/conal-thomas-mcginnis-31654127a">LinkedIn</a></li>
+      </ul>
+    </li>
+    <li><a href="docs/assets/pages/journallanding.html">Journal</a></li>
+  </ul>
+</nav>
 
 <!-- Website goals -->
 <!-- Link to YouTube with cute art -->
@@ -19,52 +32,7 @@
 <!-- Links to Twitter, Redbubble -->
 <!-- Link to LinkedIn -->
 
-
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-<p>Testing second paragraph.</p>
-<p style="color:orange;">This is orange text.</p>
-
-<a href="https://www.bit.ly/thudthudtonk">YouTube Channel</a>
-
-<a href="test1.html">test1</a>
-
-<button type="button" id="counterButton" onclick="incrementCounter()">Test Button</button>
-
-<button type="button" id="alertButton" onclick="doAlert()">Test Button2</button>
-
-<!--<script> var count = 0; </script>
-<script> incrementCounter() {
-	count+=1;
-	document.getElementById("counter").innerHTML = counter.toString();
-</script>
--->
-
-<p id="counter">0</p>
-
-<p>Longest Streak:</p>
-<p id="streak">0</p>
-
-<div></div>
-
-<button type="button" id="redButton" onclick="redBlueCheck('red')">Red Button</button>
-
-<div></div>
-
-<button type="button" id="blueButton" onclick="redBlueCheck('blue')">Blue Button</button>
-
-<div></div>
-
-<p id="colorParagraph">red</p>
-
-<div></div>
-
-<p id="rightWrong"></p>
-
-<div></div>
-
-<image src="docs/assets/images/jorb.gif" alt="jorb"></image>
+<image src="docs/assets/images/orbs/jorb.gif" alt="jorb"></image>
 <!--<button type="button" onclick='document.getElementById("counter").innerHTML = "bingus"'>Test Button3</button>
 
 <button type="button" onclick=incrementCounter>Test Button4</button>
