--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link rel="stylesheet" href="docs/assets/css/test.css">
+  <link rel="stylesheet" href="docs/assets/css/index.css">
 </head>
 <body>
 
@@ -19,6 +19,10 @@
     <li><a href="docs/assets/pages/journallanding.html">Journal</a></li>
   </ul>
 </nav>
+
+<br>
+
+<h1>Testing Header Font</h1>
 
 <image src="docs/assets/images/orbs/jorb.gif" alt="jorb"></image>
 
