--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 <nav>
   <ul>
-    <li><a href="test1.html">test1</a></li>
     <li><a href="docs/assets/pages/orbs.html">Orb Collection</a></li>
     <li><a href="docs/assets/pages/buttongame.html">Button Game</a></li>
     <li><a href="#">Links</a>
@@ -17,12 +16,13 @@
       </ul>
     </li>
     <li><a href="docs/assets/pages/journallanding.html">Journal</a></li>
+    <li><a href="docs/assets/pages/aestheticexperimentation.html">Wacky Zone</a></li>
   </ul>
 </nav>
 
 <br>
 
-<h1>Testing Header Font</h1>
+<h1 class="rainbow-text">Testing Header Font</h1>
 
 <image src="docs/assets/images/orbs/jorb.gif" alt="jorb"></image>
 
