--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="docs/assets/css/index.css">
+  
 </head>
 <body>
 
@@ -22,58 +24,19 @@
 
 <br>
 
-<h1 class="rainbow-text">Testing Header Font</h1>
+<div class="section" id="section1">
+  <h1>Test1</h1>
+</div>
 
-<image src="docs/assets/images/orbs/jorb.gif" alt="jorb"></image>
+<div class="section" id="section2">
+  <h1>Test2</h1>
+</div>
 
-<!-- Testing by stealing some tutorial online, will make my own version later -->
-<!-- Assuming the css that I copied works, which I still need to figure out, I should
-be able to change what the "buttons" (which are really links) navigate to in the href attribute-->
-<!-- Should make some more pages or something and have them go to this stuff. -->
+<div class="section" id="section3">
+  <h1>Test3</h1>
+</div>
 
-<p>Note: This was stolen for testing, see source:</p>
-<a href="https://line25.com/tutorials/how-to-create-a-pure-css-dropdown-menu/">Source</a>
-
-<nav>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Tutorials</a>
-      <ul>
-        <li><a href="#">Photoshop</a></li>
-        <li><a href="#">Illustrator</a></li>
-        <li><a href="#">Web Design</a>
-          <ul>
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li><a href="#">Articles</a>
-      <ul>
-        <li><a href="#">Web Design</a></li>
-        <li><a href="#">User Experience</a></li>
-      </ul>
-    </li>
-    <li><a href="#">Inspiration</a></li>
-  </ul>
-</nav>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<p>This text is here so that you can scroll down far enough to interact with the stolen testing menu</p>
+<script src="docs/assets/js/segmentSnapping.js"></script>
 
 </body>
 </html>
