--- a/index.html
+++ b/index.html
@@ -52,6 +52,36 @@
           congue tempor. Vivamus dui purus, mattis non ante sit amet, consectetur tincidunt tellus. Lorem ipsum dolor sit amet, consectetur
           adipiscing elit. Nullam lacinia condimentum ultricies. Maecenas nec posuere metus. Quisque vel dui ipsum.
         </p>
+
+        <!--
+          My name is Conal Thomas-McGinnis and I graduated from The University of Iowa
+          in December of 2022 with a Bachelor's in Computer Science, and a Bachelor's in
+          Philosophy. I have had a passion for all things digital since I was given a Dell
+          laptop in 2012 for use in debate, an extracurricular I participated in from the 5th
+          grade all throughout highschool. While I was supposed to use the computer for solely
+          research and case composition, I spent plenty of time playing games, and tinkering
+          with code. This interest was cemented when I took part in a GameMaker Summer Camp
+          and started making my own games. Then, in my Sophomore year of high school, I
+          lept onto the opportunity to take the first available computer science course I could,
+          and took every subsequent course until AP Computer Science A and AP Computer Science
+          Principles in my junior and senior years. Then, I dedicated my college experience
+          to computer science at every opportunity, while also applying my debate skills to
+          a philosophy major. 
+
+          After graduating in 2022, I began to supplement my college education by teaching myself
+          specific languages, libraries, and APIs to advance towards my goal of cementing myself
+          in a career in the computer sciences. My experience at the University of Iowa was fantastic,
+          and I gained the skills and wherewithal to quickly pick up and adapt to different
+          programming environments and frameworks. However, most potential employers I've come
+          across have wants for specific areas of experience, largely including ones that I
+          was never exposed to at the University. After struggling to secure a job in the field
+          with only my college experience representing me, I've set to the task of fleshing out
+          a stronger personal portfolio to demonstrate that, in spite of my lack in active job
+          experience in the field, I am an intelligent and capable programmer. One aspect of this
+          task that you're interfacing with right now is my portfolio website, made from scratch
+          to put my works on display!
+        -->
+        
       </div>
     </div>
   
@@ -66,11 +96,33 @@
           Vivamus tristique enim posuere elit elementum laoreet. Suspendisse quis pretium ligula. Sed vitae
           pellentesque lectus.
         </p>
+
+        <!-- 
+          This page is hosted through GithubPages and uses a combination of HTML, CSS, and JavaScript.
+          As such, I have not implemented any server scripting with PHP or otherwise. I have also opted to
+          construct the site largely from scratch, as opposed to using libraries like React.js. This is
+          because this site is only intended to be a static gallery, whose purpose is to show
+          off my portfolio and my resume.
+
+          Throughout the process of learning how to utilize HTML and CSS alongside my understanding of Java
+          and JavaScript, I have done lots of tinkering with small experiments on this site. Those experiments
+          are a testament to my iterative learning process as I picked up new skills and put them to the
+          test to challenge the depth of my own understanding. Though these experiments aren't polished
+          packaged examples of my work, they will still be accessible through the menu bar to mess with.
+        -->
+
       </div>
     </div>
   
     <div class="section" id="section3">
-      <h1>Test3</h1>
+      <h1>Up First!</h1>
+      <div id="upFirst">
+        <p class="wrapThis">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+
+        <!-- With the introductions out of the way, the first thing to look at is my resume, which you can find here:-->
+        <!-- Put button that directs to Resume here, though also include in menu-->
+      </div>
     </div>
   </div>
   <script src="docs/assets/js/segmentSnapping.js"></script>
